acceptance/tests/fixtures/bases/ingress/kustomization.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

resources:
  - ingress.yaml
